--- a/Glowb/Storyboards/Relationship.storyboard
+++ b/Glowb/Storyboards/Relationship.storyboard
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <view key="tableHeaderView" contentMode="scaleToFill" id="mon-EC-H6K" customClass="BaseView" customModule="Glowb" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="320"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lyB-Mk-1Tk">
@@ -30,13 +30,13 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="bottom" secondItem="lyB-Mk-1Tk" secondAttribute="bottom" id="LxS-uv-hbT"/>
+                                <constraint firstAttribute="bottom" secondItem="lyB-Mk-1Tk" secondAttribute="bottom" constant="20" id="LxS-uv-hbT"/>
                                 <constraint firstItem="lyB-Mk-1Tk" firstAttribute="top" secondItem="mon-EC-H6K" secondAttribute="top" constant="10" id="RSe-GH-yP6"/>
                                 <constraint firstItem="lyB-Mk-1Tk" firstAttribute="centerX" secondItem="mon-EC-H6K" secondAttribute="centerX" id="Slo-pC-SXr"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="themeAdapter">
-                                    <integer key="value" value="2"/>
+                                    <integer key="value" value="1"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </view>
