--- a/Glowb/Views/Cells/TextFieldTableViewCell.xib
+++ b/Glowb/Views/Cells/TextFieldTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextViewCellIdentifier" id="KGk-i7-Jjw" customClass="TextViewTableViewCell" customModule="Glowb" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TextFieldCellIdentifier" id="KGk-i7-Jjw" customClass="TextFieldTableViewCell" customModule="Glowb" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -19,13 +19,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NXu-cu-njr">
-                        <rect key="frame" x="23" y="11" width="39.5" height="21.5"/>
+                        <rect key="frame" x="15" y="11" width="39.5" height="21.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name (e.g. Hannah)" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="01P-Zr-oq7" customClass="BaseTextField" customModule="Glowb" customModuleProvider="target">
-                        <rect key="frame" x="70.5" y="11" width="234.5" height="20"/>
+                        <rect key="frame" x="62.5" y="11" width="242.5" height="20"/>
                         <nil key="textColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <textInputTraits key="textInputTraits"/>
@@ -37,10 +37,10 @@
                     </textField>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="NXu-cu-njr" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="8xL-Yv-AMm"/>
                     <constraint firstItem="NXu-cu-njr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="3" id="DoQ-ss-h3M"/>
                     <constraint firstAttribute="bottomMargin" secondItem="NXu-cu-njr" secondAttribute="bottom" constant="3" id="azU-T5-04D"/>
                     <constraint firstItem="01P-Zr-oq7" firstAttribute="leading" secondItem="NXu-cu-njr" secondAttribute="trailing" constant="8" id="gWm-fn-9QH"/>
-                    <constraint firstItem="NXu-cu-njr" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="15" id="gff-85-HHM"/>
                     <constraint firstAttribute="trailing" secondItem="01P-Zr-oq7" secondAttribute="trailing" constant="15" id="gqj-Qs-Xk5"/>
                     <constraint firstItem="01P-Zr-oq7" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="u7A-ro-UUI"/>
                 </constraints>
