--- a/Glowb/Views/Cells/ColorSelectionRepresentableTableViewCell.xib
+++ b/Glowb/Views/Cells/ColorSelectionRepresentableTableViewCell.xib
@@ -5,12 +5,13 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SelectionRepresetableTableViewCell" id="KGk-i7-Jjw" customClass="ColorSectionRepresentableTableViewCell" customModule="Glowb" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ColorSelectionRepresentableCellIdentifier" id="KGk-i7-Jjw" customClass="ColorSelectionRepresentableTableViewCell" customModule="Glowb" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -28,10 +29,28 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k4u-p4-2Ag" customClass="ColorPreviewView" customModule="Glowb" customModuleProvider="target">
+                        <rect key="frame" x="277" y="8" width="28" height="28"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="k4u-p4-2Ag" secondAttribute="height" multiplier="1:1" id="Ldl-Ur-xof"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="color">
+                                <color key="value" red="0.69831811743569949" green="1" blue="0.28453227084770516" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="14"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="k4u-p4-2Ag" secondAttribute="bottom" constant="8" id="D36-uR-XIX"/>
                     <constraint firstItem="xIE-de-1ye" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Ilw-1n-O1n"/>
                     <constraint firstItem="xIE-de-1ye" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="NkN-1e-4Vm"/>
+                    <constraint firstItem="k4u-p4-2Ag" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="iC1-EL-Gay"/>
+                    <constraint firstAttribute="trailing" secondItem="k4u-p4-2Ag" secondAttribute="trailing" constant="15" id="r50-Wo-J4d"/>
                 </constraints>
             </tableViewCellContentView>
             <userDefinedRuntimeAttributes>
@@ -39,6 +58,10 @@
                     <integer key="value" value="1"/>
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
+            <connections>
+                <outlet property="colorPreviewView" destination="H2p-sc-9uM" id="KQE-9q-8w5"/>
+                <outlet property="label" destination="xIE-de-1ye" id="wzY-71-415"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
