--- a/Glowb/Wizard/Storyboards/Connect.storyboard
+++ b/Glowb/Wizard/Storyboards/Connect.storyboard
@@ -6,13 +6,14 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Connect View Controller-->
         <scene sceneID="CSf-Gv-C84">
             <objects>
-                <viewController id="XbA-LA-wIf" sceneMemberID="viewController">
+                <viewController id="XbA-LA-wIf" customClass="ConnectViewController" customModule="Glowb" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="EFT-od-d0H"/>
                         <viewControllerLayoutGuide type="bottom" id="NK9-Ta-ANm"/>
@@ -20,7 +21,18 @@
                     <view key="view" contentMode="scaleToFill" id="mY1-vp-f05" customClass="BaseView" customModule="Glowb" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="howToConnect" translatesAutoresizingMaskIntoConstraints="NO" id="iHU-QF-oaU">
+                                <rect key="frame" x="40" y="0.0" width="295" height="667"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="iHU-QF-oaU" secondAttribute="trailing" constant="40" id="B12-ZR-jPu"/>
+                            <constraint firstItem="NK9-Ta-ANm" firstAttribute="top" secondItem="iHU-QF-oaU" secondAttribute="bottom" id="E8y-Wb-Agx"/>
+                            <constraint firstItem="iHU-QF-oaU" firstAttribute="leading" secondItem="mY1-vp-f05" secondAttribute="leading" constant="40" id="SwC-8K-hLg"/>
+                            <constraint firstItem="iHU-QF-oaU" firstAttribute="top" secondItem="mY1-vp-f05" secondAttribute="topMargin" id="Urw-80-ze1"/>
+                        </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="themeAdapter">
                                 <integer key="value" value="1"/>
@@ -30,7 +42,10 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nom-Sz-j5Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-534" y="-163"/>
+            <point key="canvasLocation" x="-535.20000000000005" y="-163.26836581709148"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="howToConnect" width="289" height="301"/>
+    </resources>
 </document>
