--- a/Glowb/Views/Cells/TableView/TextFieldTableViewCell.xib
+++ b/Glowb/Views/Cells/TableView/TextFieldTableViewCell.xib
@@ -25,7 +25,7 @@
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Name (e.g. Hannah)" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="01P-Zr-oq7" customClass="BaseTextField" customModule="Glowb" customModuleProvider="target">
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="(e.g. Hannah)" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="01P-Zr-oq7" customClass="BaseTextField" customModule="Glowb" customModuleProvider="target">
                         <rect key="frame" x="63" y="11" width="242" height="20"/>
                         <nil key="textColor"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
