crop and compress

--- a/Glowb/Storyboards/Interaction.storyboard
+++ b/Glowb/Storyboards/Interaction.storyboard
@@ -52,10 +52,19 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </view>
+                                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="i3N-3K-dEE">
+                                    <rect key="frame" x="106" y="308" width="163" height="2"/>
+                                    <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="progressTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="trackTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </progressView>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="LtT-rC-whb" secondAttribute="bottom" constant="20" id="17m-ak-6ol"/>
+                                <constraint firstItem="i3N-3K-dEE" firstAttribute="width" secondItem="lyB-Mk-1Tk" secondAttribute="width" id="CCs-k8-PAe"/>
+                                <constraint firstItem="i3N-3K-dEE" firstAttribute="centerX" secondItem="mon-EC-H6K" secondAttribute="centerX" id="TU7-Hq-cqZ"/>
+                                <constraint firstAttribute="bottom" secondItem="i3N-3K-dEE" secondAttribute="bottom" constant="10" id="WQT-wi-6e7"/>
                                 <constraint firstItem="LtT-rC-whb" firstAttribute="top" secondItem="mon-EC-H6K" secondAttribute="top" constant="10" id="rfA-eU-6Fg"/>
                                 <constraint firstItem="LtT-rC-whb" firstAttribute="centerX" secondItem="mon-EC-H6K" secondAttribute="centerX" id="shd-84-b44"/>
                             </constraints>
@@ -72,6 +81,7 @@
                     </tableView>
                     <connections>
                         <outlet property="previewImageView" destination="vlQ-bZ-tfE" id="LUB-ub-7hJ"/>
+                        <outlet property="uploadProgressView" destination="i3N-3K-dEE" id="eeu-in-o2G"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K6x-ra-adz" userLabel="First Responder" sceneMemberID="firstResponder"/>
