--- a/Glowb/Views/Cells/TableView/DeviceSelectionTableViewCell.xib
+++ b/Glowb/Views/Cells/TableView/DeviceSelectionTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DeviceSelectionTableViewCell" customModule="Glowb" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DeviceSelectionCellIdentifier" id="KGk-i7-Jjw" customClass="DeviceSelectionTableViewCell" customModule="Glowb" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -29,10 +29,15 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="check" translatesAutoresizingMaskIntoConstraints="NO" id="YMC-Il-7ro">
+                        <rect key="frame" x="284" y="14" width="21" height="16"/>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Lvb-28-0YD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="IOs-Kh-MYs"/>
+                    <constraint firstItem="YMC-Il-7ro" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="J8t-87-TYE"/>
                     <constraint firstItem="Lvb-28-0YD" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="bl3-gc-Wf7"/>
+                    <constraint firstAttribute="trailing" secondItem="YMC-Il-7ro" secondAttribute="trailing" constant="15" id="e7A-LH-zf5"/>
                 </constraints>
             </tableViewCellContentView>
             <userDefinedRuntimeAttributes>
@@ -40,6 +45,13 @@
                     <integer key="value" value="1"/>
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
+            <connections>
+                <outlet property="label" destination="Lvb-28-0YD" id="c97-wb-zu3"/>
+                <outlet property="selectedIndicator" destination="YMC-Il-7ro" id="gSi-Zf-YWY"/>
+            </connections>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="check" width="21" height="16"/>
+    </resources>
 </document>
