--- a/Glowb/Views/Cells/TableView/SingleActionTableViewCell.xib
+++ b/Glowb/Views/Cells/TableView/SingleActionTableViewCell.xib
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WiFiCellIdentifier" id="KGk-i7-Jjw" customClass="WiFiTableViewCell" customModule="Glowb" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SingleActionCellIdentifer" id="KGk-i7-Jjw" customClass="SingleActionTableViewCell" customModule="Glowb" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wVD-JL-j4S" customClass="PrimaryTextLabel" customModule="Glowb" customModuleProvider="target">
-                        <rect key="frame" x="15" y="11" width="290" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fjo-7l-ZqI" customClass="PrimaryTextLabel" customModule="Glowb" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -31,9 +31,10 @@
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="wVD-JL-j4S" secondAttribute="trailing" constant="15" id="8Bl-Zt-gpk"/>
-                    <constraint firstItem="wVD-JL-j4S" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="PI7-e8-3Af"/>
-                    <constraint firstItem="wVD-JL-j4S" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="eQ4-cr-yYk"/>
+                    <constraint firstAttribute="bottom" secondItem="Fjo-7l-ZqI" secondAttribute="bottom" id="2WA-Va-oen"/>
+                    <constraint firstAttribute="trailing" secondItem="Fjo-7l-ZqI" secondAttribute="trailing" id="My5-Iz-TJh"/>
+                    <constraint firstItem="Fjo-7l-ZqI" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="SX8-v2-3kj"/>
+                    <constraint firstItem="Fjo-7l-ZqI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="jJv-IL-iuY"/>
                 </constraints>
             </tableViewCellContentView>
             <userDefinedRuntimeAttributes>
@@ -42,7 +43,7 @@
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
             <connections>
-                <outlet property="networkNameLabel" destination="wVD-JL-j4S" id="qZq-P7-ohB"/>
+                <outlet property="label" destination="Fjo-7l-ZqI" id="fNG-dw-Rqq"/>
             </connections>
         </tableViewCell>
     </objects>
